# card-portfolio-anomaly-detection

./: .coderabbit.yaml  .env.example  .flake8  .gitignore  =10.0.0  =21.0.0  AGENTS.md  BUGFIX_NAN_SHAPE_MISMATCH.md  README.md  cli.py  coverage.xml  main.py  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements.txt
.claude/: instructions.md
.claude/agents/: config-utils.md  data-engineer.md  feature-engineer.md  ml-model.md  qa-engineer.md
.claude/prompts/: implement-feature.md
.github/workflows/: ci.yml
.serena/: project.yml
config/: dataconfig.yaml  modelconfig.yaml  monitoring_config.yaml  powerbi_config.yaml
dags/: anomaly_detection_dag.py
datasamples/: README.md  transactions_2025-11-18.csv  transactions_2025-11-18.parquet  transactions_historical.csv  transactions_historical.parquet
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  KNOWLEDGE_TRANSFER.md  POWER_BI_GUIDE.md  PRESENTATION_OUTLINE.md  REQUIREMENTS.md  USER_GUIDE.md  adr-template.md  design.md  tasks.md  test-templates.md
scripts/: generate_sample_data.py
src/data/: loader.py  validator.py
src/features/: builder.py
src/models/: __init__.py  scorer.py
src/monitoring/: __init__.py  alerting.py  health_checks.py
src/reporting/: __init__.py  generator.py
src/utils/: config_loader.py  exceptions.py  logger.py
tests/e2e/: test_full_pipeline.py  test_full_pipeline_sample_data.py  test_reproducibility.py
tests/fixtures/: validation_test_data.csv
tests/integration/: test_data_to_features.py  test_features_to_scoring.py
tests/spectests/: test_req_03_02_01.py
tests/unit/: test_cli.py  test_config_loader.py  test_dataloader.py  test_datavalidator.py  test_featurebuilder.py  test_logger.py  test_modelscorer.py  test_reportgenerator.py
